# tlogic

./: .gitignore  README.md  tlogic.cabal
src/Control/Monad/: Predicate.hs
src/Control/Monad/Predicate/: Internal.hs
src/Data/: Logic.hs
src/Data/Logic/: Atom.hs  Choice.hs  List.hs  Nat.hs  Pair.hs  Term.hs  Var.hs
