name:                tlogic
version:             0.1.0.0
synopsis:            Typed logic programming embedded in Haskell.
description:         Typed logic programming embedded in Haskell.
homepage:            https://github.com/YellPika/tlogic
license:             BSD3
license-file:        LICENSE
author:              YellPika
maintainer:          yellpika@gmail.com
copyright:           Copyright © Anthony Vandikas, 2013
category:            Control, Data, Logic, Unification
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Control.Monad.Predicate,
                       Data.Logic.Atom,
                       Data.Logic.Choice,
                       Data.Logic.List,
                       Data.Logic.Pair,
                       Data.Logic.Term,
                       Data.Logic.Var

  other-modules:       Control.Monad.Predicate.Internal
  build-depends:       base >=4.6 && <4.7, logict
  hs-source-dirs:      src
  default-language:    Haskell2010
